--- a/assets/css/components/contact.css
+++ b/assets/css/components/contact.css
@@ -1,33 +1,58 @@
 /************************ CONTACT ******************************/
+
 .container-contact{
-    /* height: 100vh; */
-}
-.container{
     padding-left: 10px;
     padding-right: 10px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 130px;
     gap: 30px;
 
 }
-.form-row input{
-    width: 500px;
+.container{
+    margin-bottom: 30px;
+}
+.container-contact .content{
+    margin-top: 30px;  
+
+}
+.container-contact .container h3{
+   color: rgb(0, 128, 68);
+   font-size: 2rem;
+   font-weight: bold;
+   padding-top: 20px;
+   text-transform: uppercase;
+   text-align: center;
+}
+
+/***************** FIRST CONTAINER *******************/
+.container-contact .container h1{
+    font-size: 3rem;
+    color: rgb(0, 128, 68);
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+}
+.container-contact .container .image img{
+    width: 300px;
+    height: 250px;
     border-radius: 10px;
 }
+.container-contact .container .image h4{
+    font-size: 1.8rem;
+}
+/********************* SECOND CONTAINER ***************************/
+
+
+.first-section-us .first-section h2{
+    color: rgb(0, 128, 68);
+    
+}
+/***************************** SECOND SECTION ********************/
 .second-section-us .form-row  input{
     margin-top: 10px;
     height: 40px;
     background-color:#efefef;
     outline: none;
-    opacity: 0.5;
     
-}
-
-/******************************* COPIE *************************/
-
-.first-section-us .first-section h2{
-    color: rgb(0, 128, 68);
-
 }
 .second-section-us .form-row .name,
 .second-section-us .form-row .mail{
@@ -36,12 +61,12 @@
     
 }
 .form-row input{
-    width: 250px;
+    width: 320px;
     border-radius: 10px;
     margin-bottom: 10px;
 }
 .form-row  .message{
-    width: 520px;
+    width: 660px;
     border-radius: 10px;
 }
 .second-section-us{
@@ -61,10 +86,8 @@
    font-size: 1.2rem;
    font-weight: bold;
 }
-/***************************** copie ********************/
 .second-section-us .form-row .name,
 .second-section-us .form-row .mail{
-    padding-left: 10px;
     padding-left: 10px;
     
 }
@@ -75,13 +98,12 @@
 .second-section-us .btn{
     background-color: rgb(0, 128, 68);
     color: white;
-    font-size: 1rem;
-    
+    font-size: 1.8rem; 
 }
 
 .form-row .message{
     margin-top: 10px;
-    padding-bottom: 150px;
+    padding-bottom: 350px;
     padding-top: 10px;
     flex-wrap: wrap;
     background-color: #efefef;
@@ -120,6 +142,12 @@
    
 }
 @media screen and (max-width: 768px){
+    .container-contact .container .image{
+        display: block;
+    }
+    .container-contact .container h1{
+        font-size: 2rem;
+    }
     .container-contact .second-section-us .form-cop  {
         display: block;
     }
@@ -131,12 +159,18 @@
     }
     .container-contact .container{
         display: block;
-        /* height: 100vh; */
     }
 
-   
+    .second-section-us .btn{
+        background-color: rgb(0, 128, 68);
+        color: white;
+        font-size: 1.2rem; 
+    }
 }
 @media screen and (max-width: 540px){
+    .container-contact{
+        padding-top: 400px;
+    }
     .second-section-us .form-cop  {
         display: block;
     }
