--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,43 +9,34 @@ body{
     font-size: 1.4rem;
     text-align: justify;
 }
-    /********************** HEADER *************************/
+/********************** HEADER *************************/
 header{
     top: 0;
-    background-color: rgb(0, 128, 68);
-    color: white;
-    box-shadow: 1px 2px 5px #ccc;
-    top: 2px;
-    display: flex;
-    position: sticky;
-    top: 0px;
-    height: 100px;
+    z-index: var(--z-index-header);
+    position: fixed;
+    width: 100%;
 }
+.box{
+    top: 0;
+}
+header nav#menu{
+    top: 0;
+}
+/* .container{
+    z-index: var(--z-index-container);
+
+} */
 header h1{
     margin: 0px;
     padding: 20px;
+}
 
-}
-header .container-fluid .collapse .nav-item a,
-header .container-fluid a {
-    color: white;
-    font-size: 1.8rem;
-    text-transform: uppercase;
-    font-weight: bold;
-}
-header .container-fluid .collapse .nav-item a:hover,
-header .container-fluid a:hover {
-    background-color: rgb(15, 201, 114);
-    
-}
-header .container-fluid .collapse .nav-item a:hover,
-header .container-fluid a:hover {
-    color: white;
-    cursor: pointer;
-}
+
+
+
 /********************* ACCUEIL *****************************/
 .container{
-    z-index: var(--z-index-header);
+    z-index: var(--z-index-container);
     margin-bottom: 0px;
     margin-top: 0px;
 }
@@ -54,47 +45,11 @@ header .container-fluid a:hover {
     width: 100%;
     background-image: url(/assets/images/accueil/plant-.jpg);
     background-repeat: no-repeat;
+    background-position-x: 60%;
     background-size: cover;
 }
-.container-nav .image img{
-    height: 700px;
-    width: 400px;
-    /* border-radius: 50px; */
-    /* position: fixed; */
-    background-repeat: no-repeat;
-    background-size: cover;
-    right: 0px;
-    margin-left: 1300px;
-    margin-top: 70px;
-    border: 20px;
-}
-/* .container-nav .image2 img{
-    height: 50px;
-    width: 50px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    right: -700px;
-    top: 50px;
-} */
-.container-nav .image3 img{
-    height: 50px;
-    width: 50px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    right: -40px;
-    top: 170px;
-}
-.container-nav .image4 img{
-    height: 100px;
-    width: 100px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    right: -250px;
-    top: 150px;
-}
+
+
 .container-nav .description{
     padding-top: 40px;
     left: 50px;
@@ -111,25 +66,75 @@ header .container-fluid a:hover {
     font-weight: bold;
 }
 
+
+/******************* Z-INDEX ***************/
+
+/* .header{
+    z-index: var(--z-index-header);
+}
+.footer{
+    z-index: var(--z-index-footer);
+}
+.resum-banner-container {
+    z-index: var(--z-index-resum-banner-container);
+}
+.container-apropos {
+    z-index: var(--z-inddex-container-apropos);
+}
+.container-competences {
+    z-index: var(--z-index-container-competences);
+}
+.container-contact {
+    z-index: var(--z-index-container-contact);
+}
+.container-profolio {
+    z-index: var(--z-index-container-profolio);
+} */
+
+/*********************** NAV ************************/
+
+nav#menu ul{
+    background-color: rgb(0, 128, 68);
+    color: white;
+    text-transform: uppercase;
+    cursor: pointer;
+    top: 0;
+}
+nav#menu ul li:hover{
+    background-color: rgb(15, 201, 114);
+}
+
+nav#menu ul li a{
+    white-space: nowrap;
+    height: 100px;
+    padding-top: 30px;
+    line-height: 50px;
+    color: inherit;
+    font-size: 2rem;
+    text-decoration: inherit;
+    gap: 50px;
+    top: 0;
+}
+
+
+
 /*********************** FOOTER ***************************/
 footer{
-    background-color: rgb(0, 128, 68);
-    height: 100px;
+    background-color: rgb(00, 128, 68);
+    height: 150px;
     margin: 0px;
 }
 footer div, footer P{
     color: white;
     text-align: center;
-    font-size: 1.4rem;
-}
-footer div{
     font-size: 1.8rem;
-    font-weight: bold;
-    padding-top: 10px;
 }
-/******************* Z-INDEX ***************/
-header{
-    z-index: var(--z-index-header);
+footer h2{
+    color: white;
+    /* font-size: 1.8rem; */
+    font-weight: bold;
+    padding-top: 30px;
+    text-align: center;
 }
 footer{
     position: relative;
@@ -138,23 +143,43 @@ footer{
 }
 
 
+
 /********************************* MADIA **************************************/
 
 
 @media screen and (max-width: 768px){
-    .form-row input{
-        margin-top: 10px;
-        width: 300px;
-        height: 40px;
+    header ul li a{
+        display: block; 
     }
+    
     header .container-fluid {
         background-color: rgb(0, 128, 68);
+    }
+    nav#menu ul li a{
+        font-size: 1.4rem;
     }
     .container {
         flex-wrap: wrap;
     }
-    .container .first-section-us p {
-       font-size: 1.2rem;
+    .navbar .container-fluid .navbar-toggler span{
+        justify-content: space-between;
+    }
+    .navbar .container-fluid  {
+        justify-content: space-between;
+        
+    }
+}
+@media screen and (max-width: 700px) {
+    nav#menu >ul{
+        flex-direction: column;
+        gap: 0;
+    }
+    #menu >ul li{
+        text-align: center;
+        border-bottom: 0.1px solid #ccc;
+    }
+    #menu >ul >li:last-child{
+        border: none;
     }
 }
 @media screen and (max-width: 540px) {
@@ -166,35 +191,7 @@ footer{
         display: block;
         font-size: 2rem;
     }
-    /********************** CONTACT ********************/
-    .container .first-section-us p {
-       font-size: 1.2rem;
-    }
-    .contact{
-        display: block;
-    }
-    .second-section-us .form-row div i{
-        color: #ccc;
-        font-size: 1.5rem;
-        position: relative;
-        right: -200px;
-        bottom: -40px;
-        cursor: pointer;
-        display: flex;
-        
-    }
-    .form-row input{
-        margin-top: 10px;
-        width: 250px;
-        height: 40px;
-        
-    }
-    .icons p{
-        padding-left: 0px;
-    }
-    .container{
-        display: block;
-    }
+    
     .flex-1 h1{
         font-size: 1.3rem;
     }
@@ -206,29 +203,12 @@ footer{
         font-weight: bold;
         text-transform: uppercase;
     }
+    footer h2{
+        font-size: 1.8rem;
+    }
     
 }
 
 @media screen and (max-width: 280px){
-    .form-row input{
-        margin-top: 10px;
-        width: 180px;
-        height: 20px;
-        
-    }
-    .second-section-us .form-row div i{
-        color: #ccc;
-        font-size: 1.5rem;
-        position: relative;
-        right: -140px;
-        bottom: -45px;
-        cursor: pointer;
-        display: flex;
-        
-    }
-    .contact{
-        padding-left: 10px;
-        padding-right: 10px;
     
-    }
 }
